# python-dev-tools

./: .codeclimate.yml  .coveralls.yml  .readthedocs.yaml  .travis.yml  CONTRIBUTING.rst  DELETEME.yml  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  deliver.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini  whatalinter_vscode.py
.github/: ISSUE_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/WORKFLOWS/: tests.yml
.github/workflows/: codeql.yml  coverage.yml  tests.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
python_dev_tools/: __init__.py  flake8_whatalinter.py  whataformatter.py  whatalinter.py
python_dev_tools/formatters/: autoflake.py  black.py  common.py  format_file.py  pyupgrade.py
python_dev_tools/linters/: common.py  flake8.py  lint.py  mccabe.py  pycodestyle.py  pydocstyle.py  pyflakes.py
tests/: test_python_dev_tools.py
