[tool.poetry]
name = "python_dev_tools"
version = "2020.9.10"
description = "Needed and up-to-date tools to develop in Python"
classifiers=[
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Utilities",
]
authors = ["Vincent Poulailleau <vpoulailleau@gmail.com>"]
readme = "README.rst"
repository = "https://github.com/vpoulailleau/python-dev-tools"
homepage = "https://github.com/vpoulailleau/python-dev-tools"
documentation = "https://python-dev-tools.readthedocs.io/en/latest/"
keywords = ["python_dev_tools", "development", "tools"]
license = "BSD-3-Clause"
include = ["python_dev_tools/**/*.py", "whatalinter_vscode.py"]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
autoflake = "^1"
bandit = "1.7.2" # https://github.com/tylerwince/flake8-bandit/issues/24
black = "^22"
cohesion = "^1"
coverage = "^6"
darglint = "^1"
dlint = "^0"
doc8 = "^0"
flake8 = "^3.8.0"
flake8-2020 = "^1.6.0"
flake8-annotations = "^2.5.0"
flake8-annotations-complexity = "^0.0.6"
flake8-annotations-coverage = "^0.0.5"
flake8-bandit = "^2"
flake8-broken-line = "^0"
flake8-bugbear = "^21"
flake8-builtins = "^1.4.0"
flake8-commas = "^2.0"
flake8-comprehensions = "^3.2.0"
flake8-debugger = "^4"
flake8-docstrings = "^1.5.0"
flake8-eradicate = "^1"
flake8-expression-complexity = "^0.0.9"
flake8-fixme = "^1.1.0"
flake8-functions = "^0.0.5"
flake8-isort = "^4"
flake8-logging-format = "^0.6.0"
flake8-mutable = "^1.2.0"
flake8-pytest-style = "^1.3.0"
flake8-quotes = "^3"
flake8-rst-docstrings = "^0"
flake8-simplify = "^0.13.0"
flake8-string-format = "^0"
flake8-tidy-imports = "^4.2.1"
flake8-typing-imports = "^1"
flake8-use-fstring = "^1.3"
flake8-variables-names = "^0.0.3"
isort = "^4.3.5"
mccabe = "^0.6.0"
pip = "^20.2.0"
pep8-naming = "^0"
pycodestyle = "^2.5.0"
pydocstyle = "^5.0.0"
pyflakes = "^2.1.0"
pytest = "^6.0.0"
pytest-cov = "^2.10.0"
pytest-sugar = "^0.9"
pyupgrade = "^2.1.0"
Sphinx = "^2.4.0"
tox = "^3.19.0"
tox-travis = "^0.12"
wemake-python-styleguide = "^0.16"

[tool.poetry.scripts]
whatalinter = "python_dev_tools.whatalinter:main"
whataformatter = "python_dev_tools.whataformatter:main"

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py36, py37, py38

[testenv]
whitelist_externals =
    poetry
    echo
    sed
    cp
changedir = {toxinidir}/tests
commands =
    poetry install -v
    poetry run pytest -s -vv --cov=python_dev_tools
    poetry run coverage xml
    echo 'fix travis bug'
    sed --in-place -e 's#//home#/home#g' coverage.xml
    echo 'fix codeclimate bug, use relative path'
    sed --in-place -e 's#/home.*vpoulailleau/python-dev-tools/##g' coverage.xml
    cp coverage.xml ../coverage.xml
"""

[tool.poetry.plugins."flake8.extension"]
WAL = "python_dev_tools.whatalinter:WhatALinter"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
