[tool.poetry]
name = "python_dev_tools"
version = "2023.3.24"
description = "Needed and up-to-date tools to develop in Python"
classifiers=[
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Utilities",
]
authors = ["Vincent Poulailleau <vpoulailleau@gmail.com>"]
readme = "README.rst"
repository = "https://github.com/vpoulailleau/python-dev-tools"
homepage = "https://github.com/vpoulailleau/python-dev-tools"
documentation = "https://python-dev-tools.readthedocs.io/en/latest/"
keywords = ["python_dev_tools", "development", "tools"]
license = "BSD-3-Clause"
include = ["python_dev_tools/**/*.py", "whatalinter_vscode.py"]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
autoflake = "^1"
black = "^23"
coverage = {version = "^7", extras = ["toml"]}
darglint = "^1"
dlint = "^0"
doc8 = "^1"
docformatter = "^1"
flake8 = "^5"
flake8-2020 = "^1"
flake8-aaa = "^0"
flake8-annotations = "^3"
flake8-annotations-complexity = "^0"
flake8-annotations-coverage = "^0"
flake8-bandit = "^4"
flake8-black = "^0"
flake8-blind-except = "^0"
flake8-breakpoint = "^1"
flake8-broken-line = "^0"
flake8-bugbear = "^23"
flake8-builtins = "^1"
flake8-class-attributes-order = "^0"
flake8-coding = "^1"
flake8-cognitive-complexity = "^0"
flake8-comments = "^0"
flake8-comprehensions = "^3"
flake8-debugger = "^4"
flake8-django = "^1"
flake8-docstrings = "^1"
flake8-encodings = "^0"
flake8-eradicate = "^1"
flake8-executable = "^2"
flake8-expression-complexity = "^0"
flake8-fastapi = "^0"
flake8-fixme = "^1"
flake8-functions = "^0"
flake8-functions-names = "^0"
flake8-future-annotations = "^0"
flake8-isort = "^6"
flake8-literal = "^1"
flake8-logging-format = "^0"
flake8-markdown = "^0"
flake8-mutable = "^1"
flake8-no-pep420 = "^2"
flake8-noqa = "^1"
# flake8-pep585  #TODO python3.9+ 
# flake8-pep604  #TODO python3.10+ 
flake8-pie = "^0"
flake8-pyi = "^22"
flake8-pylint = "^0"
flake8-pytest-style = "^1"
flake8-quotes = "^3"
flake8-rst-docstrings = "^0"
flake8-secure-coding-standard = "^1"
flake8-simplify = "^0"
# flake8-slots = "^0"  # TODO https://github.com/python-formate/flake8-slots/issues/37
flake8-string-format = "^0"
flake8-tidy-imports = "^4"
flake8-typing-imports = "^1"
flake8-use-fstring = "^1"
flake8-use-pathlib = "^0"
flake8-useless-assert = "^0"
flake8-variables-names = "^0"
flake8-warnings = "^0"
jupyterlab-flake8 = "^0"
pandas-vet = "^0"
pip = "^22"
pep8-naming = "^0"
pybetter = "^0"
pycln = ">=1,<3"
pycodestyle = "^2"
pydocstyle = "^6"
pytest = "^7"
pytest-cov = "^4"
pytest-sugar = "^0"
pyupgrade = "^3"
removestar = "^1"
Sphinx = "^6"
ssort = "^0"
tox = "^4"
tox-travis = "^0"
# wemake-python-styleguide = "^0.17"  # TODO not available yet with flake8 5

[tool.poetry.scripts]
whataformatter = "python_dev_tools.whataformatter:main"

[tool.poetry.plugins."flake8.extension"]
WAL = "python_dev_tools.whatalinter:WhatALinter"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q  -s -vv --cov=python_dev_tools"
testpaths = [
    "tests",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
